--- a/data-analyst.html
+++ b/data-analyst.html
@@ -47,16 +47,20 @@
   
 	
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/mobify/1f960259-2390-4df9-ac2d-23a32d94f59d'>Mobify - Data Analyst (Maternity Leave Contract)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/solarisbank/jobs/4371660002'>Job Application for Data Analyst Working Student (f/m/div) at solarisBank AG at solarisBank</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/mobify/1f960259-2390-4df9-ac2d-23a32d94f59d'>Mobify - Data Analyst (Maternity Leave Contract)</a></h5> 
+<p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/credigy/ffca819b-16e6-4bda-8536-f40a6b1fe573'>Credigy - Senior Statistican</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692429148-data-analyst'>Publicis Groupe Data Analyst | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Melbourne Berlin</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/getordermark/59f50d0c-6c6c-419d-84d5-4d90b1c80a2c'>Ordermark - Associate Data Analyst</a></h5> 
@@ -67,7 +71,7 @@
 <p><span class="badge badge-light">Kuala Lumpur</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/ec0d8415-86d0-4f52-85c3-789a23f9d5f8'>Datacom - Digital Business Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/ec0d8415-86d0-4f52-85c3-789a23f9d5f8'>Datacom - Digital Business Analyst</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -75,11 +79,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/evercompliant/3959133e-0138-4b86-a852-e03ac6d76a1c'>EverCompliant - Data Analyst, Data Team</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/evercompliant/3959133e-0138-4b86-a852-e03ac6d76a1c'>EverCompliant - Data Analyst, Data Team</a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdu/'>
+<h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdu/'>
     Data Analyst at DocsApp
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -89,7 +93,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://biffa.workable.com/j/E9CF1DD64D'>Biffa Waste Services - Jobs: HR Data & Service Analyst - Apply online</a></h5> 
+<h5><a href='https://biffa.workable.com/j/E9CF1DD64D'>Biffa Waste Services - Jobs: HR Data & Service Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -101,11 +105,11 @@
 <p><span class="badge badge-light">Wien, Austria</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692421239-senior-data-analyst'>Adevinta Senior Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692421239-senior-data-analyst'>Adevinta Senior Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Wien, Austria</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wish/405759a9-964f-4ca1-97aa-0485c84819a6'>Wish - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wish/405759a9-964f-4ca1-97aa-0485c84819a6'>Wish - Data Analyst</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -113,7 +117,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/63EAB3A165'>Statistics & Data Corporation (SDC) - Jobs: Biostatistician - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/63EAB3A165'>Statistics & Data Corporation (SDC) - Jobs: Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -138,6 +142,17 @@
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/bill/3e53ff74-1cb8-4657-a4f3-0fb343a4ac7e'>Bill.com - Finance Data Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Bill.com is a leader in financial process automation for small businesses and mid-
+size companies. Making it simple to connect and do business, the Bill.com?...</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/scopely/4e747b47-8083-4ed1-bbfb-f4764ba175d0'>Scopely - Lead Game Data Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>1 day ago ... Are you a Data Analyst experienced with SQL and Tableau interested in 
+impacting business decisions with data-driven insights and recommendations? 
+Are you?...</p>
 <hr/>
 <h5><a href='https://ppdi.referrals.selectminds.com/jobs/assistant-scientist-data-review-analyst-vaccines-team-3494'>Assistant Scientist - Data Review Analyst - Vaccines Team - PPD Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -206,7 +221,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p>3 days ago ... We are looking for a passionate Data Analyst. The successful candidate will turn 
 data into information, information into insight and insight into business?...</p>
 <hr/>
-<h5><a href='https://kandidate.workable.com/j/755DAD07A1?viewed=true'>Data & Growth Analyst (1500-2000 EUR) - Apply ... - Kandidate - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kandidate.workable.com/j/755DAD07A1?viewed=true'>Data & Growth Analyst (1500-2000 EUR) - Apply ... - Kandidate - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Data & Growth Analyst (1500-2000 EUR) at Kandidate.</p>
 <hr/>
@@ -234,7 +249,7 @@ data into information, information into insight and insight into business?...</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -290,7 +305,7 @@ mobile studio, HARDlight. As part of the studio's Live Operations team, you woul
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/cision-emia/job/ozD79fwc'>Cision EMIA Careers - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cision-emia/job/ozD79fwc'>Cision EMIA Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -323,7 +338,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692370321-praktikant-in-im-bereich-hochautomatisiertes-fahren-machine-learning-data-analysis'>Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692370321-praktikant-in-im-bereich-hochautomatisiertes-fahren-machine-learning-data-analysis'>Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -351,7 +366,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bill/967ee523-681a-46e9-854a-db091815cdff'>Bill.com - Senior Risk Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/bill/967ee523-681a-46e9-854a-db091815cdff'>Bill.com - Senior Risk Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... preferably in Statistics, Physical Sciences, Computer Science, Economics, or a 
 related technical field; Experience using statistics and machine learning to solve
@@ -370,7 +385,7 @@ related technical field; Experience using statistics and machine learning to sol
 <p>4 days ago ... Each of these marketing channels center around a rich central problem from 
 deriving value from sparse data to auction theory and game theory all with the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/jCDVS5D6CI/Marketplace-Data-Analyst'>Marketplace Data Analyst - ZALORA SEA - Career Page</a></h5> 
+<h5><a href='http://zalora.applytojob.com/apply/jCDVS5D6CI/Marketplace-Data-Analyst'>Marketplace Data Analyst - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -378,7 +393,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -443,7 +458,7 @@ Syosset, New York, United States ? Data Solutions. Description. ABOUT 605.</p>
 <p>2 days ago ... Apply online for the job of Data Governance Business Analyst at Eurobank 
 Ergasias SA.</p>
 <hr/>
-<h5><a href='https://softheon.workable.com/jobs/1082139/candidates/new'>Marketing Data Analyst - Apply online - Softheon - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://softheon.workable.com/jobs/1082139/candidates/new'>Marketing Data Analyst - Apply online - Softheon - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Marketing Data Analyst at Softheon.</p>
 <hr/>
@@ -470,20 +485,6 @@ hire, you'll be responsible for data needs throughout the organization. You'll b
 <p>4 days ago ... Derive actionable insights from massive data sets with limited oversight; 
 Automate quarterly insights across native / partner channels for external facing 
 analyst?...</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1777396?gh_jid=1777396'>Job Application for Data Analyst - Returnship at Cloudflare</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 16, 2019 ... The Path Forward Return to Work program at Cloudflare is a 16 week paid 
-returnship for experienced professionals returning to the workforce after taking 
-time?...</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692155445-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
 <hr/>
 
 
